Fixed name overflow

--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -174,6 +174,9 @@ body {
                 text-transform: uppercase;
                 font-family: $card-monospace-font-family;
                 font-size: 20px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
                 position: absolute;
                 bottom: 0;
                 width: 190px;
